[project]
name = "pubmed-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "KAVULURI ABHISHEK KUMAR REDDY",email = "kumarabhishekkumar063@gmal.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_papers", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fetch-papers = "pubmed_papers.test_fetch:main"
